Fix overflow issue: Set overflow-x to hidden on main element

--- a/src/index.scss
+++ b/src/index.scss
@@ -126,6 +126,7 @@ footer {
 main {
   flex: auto;
   width: 100%;
+  overflow-x: hidden;
 }
 
 .outline {
